iac/aks-global-manifests/dashboard-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"     
spec:
  tls:
    - hosts:
        - #{aks.dashboard.hostname}#
      secretName: dashboard-tls-secret
  rules:
    - host: #{aks.dashboard.hostname}#
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
